crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/array_length/literal_fractional_division/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 3208] Error: Array with fractional length specified.
   ╭─[input.sol:7:13]
   │
 7 │     uint256[10 / 4] x;
   │             ───┬──  
   │                ╰──── Error occurred here.
───╯
